force-app/main/default/objects/Torc_Rd1_Integration__c/Torc_Rd1_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Torc Rd1 Integration</label>
</CustomObject>