force-app/main/default/objects/Torc_Rd1_Integration__c/fields/Candidate_bi_Directional__c.field-meta.xml
<CustomField>
    <fullName>Candidate_bi_Directional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Candidate bi Directional</label>
    <type>Checkbox</type>
</CustomField>