force-app/main/default/objects/Torc_Rd1_Integration__c/fields/Candidate_Recordtype_Id__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Recordtype_Id__c</fullName>
    <label>Candidate Recordtype Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>