force-app/main/default/objects/Torc_Rd1_Integration__c/fields/Default_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_Account__c</fullName>
    <label>Default Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>