force-app/main/default/objects/Torc_Rd1_Integration__c/fields/Default_Owner__c.field-meta.xml
<CustomField>
    <fullName>Default_Owner__c</fullName>
    <label>Default Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>