force-app/main/default/objects/Torc_Rd1_Integration__c/fields/Only_Connect_Operation__c.field-meta.xml
<CustomField>
    <fullName>Only_Connect_Operation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Connect Operation</label>
    <type>Checkbox</type>
</CustomField>