force-app/main/default/objects/Torc_Rd1_Integration__c/fields/Skip_RD1_To_Torc__c.field-meta.xml
<CustomField>
    <fullName>Skip_RD1_To_Torc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip RD1 To Torc</label>
    <type>Checkbox</type>
</CustomField>