force-app/main/default/objects/Torc_Rd1_Integration__c/fields/Skip_Resume__c.field-meta.xml
<CustomField>
    <fullName>Skip_Resume__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Resume</label>
    <type>Checkbox</type>
</CustomField>