force-app/main/default/objects/Torc_Rd1_Integration__c/fields/Skip_Torc_to_RD1__c.field-meta.xml
<CustomField>
    <fullName>Skip_Torc_to_RD1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Torc to RD1</label>
    <type>Checkbox</type>
</CustomField>