force-app/main/default/objects/Torc_Rd1_Integration__c/fields/Supporting_Opco__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Opco__c</fullName>
    <label>Supporting Opco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>