force-app/main/default/objects/Torc_Rd1_Integration__c/fields/Sync_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Sync_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync Enabled</label>
    <type>Checkbox</type>
</CustomField>