force-app/main/default/objects/Torc_Rd1_Integration__c/fields/Torc_Search_URL__c.field-meta.xml
<CustomField>
    <fullName>Torc_Search_URL__c</fullName>
    <description>Torc Search URL</description>
    <inlineHelpText>Torc Search URL</inlineHelpText>
    <label>Torc Search URL</label>
    <type>Url</type>
</CustomField>