force-app/main/default/objects/Torc_Rd1_Integration__c/fields/updater_list_in_torc__c.field-meta.xml
<CustomField>
    <fullName>updater_list_in_torc__c</fullName>
    <label>updater list in torc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>