force-app/main/default/objects/Torc_Rd1_Integration__c/fields/Use_Flow_for_API_Call__c.field-meta.xml
<CustomField>
    <fullName>Use_Flow_for_API_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Flow for API Call</label>
    <type>Checkbox</type>
</CustomField>